// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1. s2s-d-action-types: 1. s2s-d-action-types 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow

test(\\"INCREMENT\\", () => {
  expect(actions.increment()).toMatchSnapshot();
});

test(\\"FETCH_USER\\", () => {
  expect(actions.fetchUser()).toMatchSnapshot();
});
"
`;

exports[`default 2. s2s-d-action-types: 2. s2s-d-action-types 1`] = `
"
// @flow
test('a', () => {});

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
test('a', () => {});

test('INCREMENT', () => {
  expect(actions.increment()).toMatchSnapshot();
});

test('FETCH_USER', () => {
  expect(actions.fetchUser()).toMatchSnapshot();
});
"
`;
